--- a/pave.html
+++ b/pave.html
@@ -13,6 +13,7 @@ body {
 	perspective: 800px;
 	perspective-origin: 10% 100px;
 	padding-left: 10em;
+	padding-top: 6em;
 }
 @keyframes spin-x {
 	from { transform: rotateX(0); }
@@ -28,9 +29,9 @@ body {
 }
 pave-3d, tiso-3d, trec-3d, hexa-3d, octo-3d, cyld-3d, boul-3d, bole-3d, cyl-q3d, bol-q3d {
 	/* propriétés modifiables */
-	--width: 20cm;
-	--height: 15cm;
-	--depth: 8cm;
+	--width: 10cm;
+	--height: 20cm;
+	--depth: 20cm;
 	--bord: solid 4px var(--bord-color);
 	--fond: #F084;
 	color: var(--text-color);
@@ -63,7 +64,7 @@ pave-3d >*, tiso-3d >*, trec-3d >*, hexa-3d >*, octo-3d >*, cyld-3d >*, boul-3d 
 	background-size: contain;
 	transform-origin: center center;
 }
-pave-3d >*:nth-child(1), tiso-3d >*:nth-child(1), trec-3d >*:nth-child(1), hexa-3d >*:nth-child(1), octo-3d >*:nth-child(1), cyld-3d >*:nth-child(1)
+pave-3d >*:nth-child(1), tiso-3d >*:nth-child(1), trec-3d >*:nth-child(1), hexa-3d >*:nth-child(1), octo-3d >*:nth-child(1), cyld-3d >*:nth-child(1), bole-3d >*:nth-child(1)
 {
 	height: var(--depth);
 	transform: rotateX(-90deg) translateZ(calc(var(--height) - var(--depth-half)));
@@ -174,90 +175,97 @@ cyl-q3d >*:nth-child(2){ transform: rotateY(123.75deg) translateZ(var(--depth-ha
 cyl-q3d >*:nth-child(3){ transform: rotateY(146.25deg) translateZ(var(--depth-half)); }
 cyl-q3d >*:nth-child(4){ transform: rotateY(168.75deg) translateZ(var(--depth-half)); }
 
-cyld-3d >*:nth-child(1), cyld-3d >*:nth-child(2){ border-radius: 50%; }
-cyld-3d >*:nth-child(4){ transform: rotateY(90deg); }
-cyld-3d >*:nth-child(5){ transform: rotateY(180deg); }
-cyld-3d >*:nth-child(6){ transform: rotateY(270deg); }
+cyld-3d >*:nth-child(1), cyld-3d >*:nth-child(2), bole-3d >*:nth-child(1){ border-radius: 50%; }
+cyld-3d >*:nth-child(4), bole-3d >*:nth-child(3), boul-3d >*:nth-child(2){ transform: rotateY(90deg); }
+cyld-3d >*:nth-child(5), bole-3d >*:nth-child(4), boul-3d >*:nth-child(3){ transform: rotateY(180deg); }
+cyld-3d >*:nth-child(6), bole-3d >*:nth-child(5), boul-3d >*:nth-child(4){ transform: rotateY(270deg); }
+boul-3d >*:nth-child(5){ transform: rotateX(180deg); }
+boul-3d >*:nth-child(6){ transform: rotateY(90deg) rotateX(180deg); }
+boul-3d >*:nth-child(7){ transform: rotateY(180deg) rotateX(180deg); }
+boul-3d >*:nth-child(8){ transform: rotateY(270deg) rotateX(180deg); }
 
 boul-3d, bole-3d, bol-q3d {
 	--height: var(--width);
 	--depth: var(--width);
 	height: var(--width);
 }
+bole-3d >*:nth-child(1){
+	transform: rotateX(-90deg) translateZ(calc(var(--height) /2 - var(--depth-half)));
+	border: var(--bord);
+}
 bol-q3d >*{
 	height: 6.5%;
 	top: unset;
-	bottom: 50%;
+	bottom: 46.75%;
 }
-bol-q3d >*:nth-child(37){
+bol-q3d >*:nth-child(49){
+	height: 3.25%;
 	transform: rotateX(90deg) translateZ(var(--depth-half));
-	background-color: #F0F4;
+	bottom: 48.375%;
+	border-top-right-radius: 50%;
 }
-bol-q3d >*:nth-child(37):before, bol-q3d >*:nth-child(37):after{
+bol-q3d >*:nth-child(49):before, bol-q3d >*:nth-child(49):after{
 	content: none;
 }
 bol-q3d >*:before {
 	transform-origin: top center;
 	transform: rotateX(-7.5deg);
 	top: 100%;
-	background-color: #00F4;
 }
 bol-q3d >*:after {
 	transform-origin: bottom center;
 	transform: rotateX(7.5deg);
 	top: -100%;
-	background-color: #F004;
 }
-bol-q3d >*:nth-child(1){ transform: rotateY(93.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(2){ transform: rotateY(101.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(3){ transform: rotateY(108.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(4){ transform: rotateY(116.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(5){ transform: rotateY(123.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(6){ transform: rotateY(131.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(7){ transform: rotateY(138.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(8){ transform: rotateY(146.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(9){ transform: rotateY(153.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(10){ transform: rotateY(161.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(11){ transform: rotateY(168.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(12){ transform: rotateY(176.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(13){ transform: rotateY(93.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(14){ transform: rotateY(101.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(15){ transform: rotateY(108.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(16){ transform: rotateY(116.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(17){ transform: rotateY(123.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(18){ transform: rotateY(131.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(19){ transform: rotateY(138.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(20){ transform: rotateY(146.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(21){ transform: rotateY(153.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(22){ transform: rotateY(161.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(23){ transform: rotateY(168.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(24){ transform: rotateY(176.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(25){ transform: rotateY(93.75deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(26){ transform: rotateY(101.25deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(27){ transform: rotateY(108.75deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(28){ transform: rotateY(116.25deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(29){ transform: rotateY(123.75deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(30){ transform: rotateY(131.25deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(31){ transform: rotateY(138.75deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(32){ transform: rotateY(146.25deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(33){ transform: rotateY(153.75deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(34){ transform: rotateY(161.25deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(35){ transform: rotateY(168.75deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(36){ transform: rotateY(176.25deg) rotateX(52.5deg) translateZ(var(--depth-half)); }
-/*
-bol-q3d >*:nth-child(37){ transform: rotateY(93.75deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(38){ transform: rotateY(101.25deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(39){ transform: rotateY(108.75deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(40){ transform: rotateY(116.25deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(41){ transform: rotateY(123.75deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(42){ transform: rotateY(131.25deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(43){ transform: rotateY(138.75deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(44){ transform: rotateY(146.25deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(45){ transform: rotateY(153.75deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(46){ transform: rotateY(161.25deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(47){ transform: rotateY(168.75deg) rotateX(75deg) translateZ(var(--depth-half)); }
-bol-q3d >*:nth-child(48){ transform: rotateY(176.25deg) rotateX(75deg) translateZ(var(--depth-half)); }
-*/
+bol-q3d >*:nth-child(1){ transform: rotateY(93.75deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(2){ transform: rotateY(101.25deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(3){ transform: rotateY(108.75deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(4){ transform: rotateY(116.25deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(5){ transform: rotateY(123.75deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(6){ transform: rotateY(131.25deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(7){ transform: rotateY(138.75deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(8){ transform: rotateY(146.25deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(9){ transform: rotateY(153.75deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(10){ transform: rotateY(161.25deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(11){ transform: rotateY(168.75deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(12){ transform: rotateY(176.25deg) rotateX(10.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(13){ transform: rotateY(93.75deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(14){ transform: rotateY(101.25deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(15){ transform: rotateY(108.75deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(16){ transform: rotateY(116.25deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(17){ transform: rotateY(123.75deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(18){ transform: rotateY(131.25deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(19){ transform: rotateY(138.75deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(20){ transform: rotateY(146.25deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(21){ transform: rotateY(153.75deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(22){ transform: rotateY(161.25deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(23){ transform: rotateY(168.75deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(24){ transform: rotateY(176.25deg) rotateX(33.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(25){ transform: rotateY(93.75deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(26){ transform: rotateY(101.25deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(27){ transform: rotateY(108.75deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(28){ transform: rotateY(116.25deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(29){ transform: rotateY(123.75deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(30){ transform: rotateY(131.25deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(31){ transform: rotateY(138.75deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(32){ transform: rotateY(146.25deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(33){ transform: rotateY(153.75deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(34){ transform: rotateY(161.25deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(35){ transform: rotateY(168.75deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(36){ transform: rotateY(176.25deg) rotateX(55.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(37){ transform: rotateY(93.75deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(38){ transform: rotateY(101.25deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(39){ transform: rotateY(108.75deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(40){ transform: rotateY(116.25deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(41){ transform: rotateY(123.75deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(42){ transform: rotateY(131.25deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(43){ transform: rotateY(138.75deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(44){ transform: rotateY(146.25deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(45){ transform: rotateY(153.75deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(46){ transform: rotateY(161.25deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(47){ transform: rotateY(168.75deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(48){ transform: rotateY(176.25deg) rotateX(78.25deg) translateZ(var(--depth-half)); }
+
 .mesure {
 	/* objet en cours de création */
 	--fond:
@@ -268,7 +276,8 @@ bol-q3d >*:nth-child(48){ transform: rotateY(176.25deg) rotateX(75deg) translate
 		linear-gradient(90deg, transparent 49.5%, maroon 49.5% 50.5%, transparent 50.5%),
 		linear-gradient(#0994 49.5%, maroon 49.5% 50.5%, #0994 50.5%);
 }
-bole-3d { animation: spin-y 10s infinite linear; }
+boul-3d { animation: spin-x 10s infinite linear; }
+
 </style><script type='text/javascript'>
 function mutationNb (mutations){
 	// mutations est un MutationRecord
@@ -317,11 +326,23 @@ class Cyld3d extends Shape3d{
 	//	for (var c=2; c< this.faceNb; c++) this.appendChild (document.createElement ('cyl-q3d'));
 }}
 class BolQ3d extends Shape3d{
-	constructor(){ super (37); }
+	constructor(){ super (48); }
 	connectedCallback(){ for (var c=0; c< this.faceNb; c++) this.appendChild (document.createElement ('p')); }
 }
 class Bole3d extends Shape3d{
-	constructor(){ super (1); }
+	constructor(){ super (5); }
+	connectedCallback(){
+		const self = this;
+		var nbChildren =0;
+		var observer = new MutationObserver (function (mutations){
+			nbChildren = nbChildren + mutationNb (mutations);
+			if (nbChildren <1) self.appendChild (document.createElement ('p'));
+			else if (nbChildren < self.faceNb) self.appendChild (document.createElement ('bol-q3d'));
+		});
+		observer.observe (this, { childList: true });
+}}
+class Boul3d extends Shape3d{
+	constructor(){ super (8); }
 	connectedCallback(){ for (var c=0; c< this.faceNb; c++) this.appendChild (document.createElement ('bol-q3d')); }
 }
 customElements.define ('pave-3d', Pave3d);
@@ -333,8 +354,9 @@ customElements.define ('cyl-q3d', CylQ3d);
 customElements.define ('cyld-3d', Cyld3d);
 customElements.define ('bol-q3d', BolQ3d);
 customElements.define ('bole-3d', Bole3d);
+customElements.define ('boul-3d', Boul3d);
 </script></head><body>
-	<bole-3d class='mesure'> </bole-3d>
+	<boul-3d> </boul-3d>
 <!--
 	<cyld-3d>
 		<p>bottom</p>
